Fix to stop bottom of welcome text being clipped

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,6 +1,7 @@
 #welcome {
     font-size: 7.3rem;
     margin-top: 3.5rem;
+    line-height: normal;
 }
 
 #welcome-tagline {
